--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
   <head>
-    <title>App Name: A Coding Project By Nate Canterbury</title>
+    <title>Reverse: A Coding Project By Nate Canterbury</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -16,6 +16,8 @@
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
+
+    <link rel="stylesheet" href="https://use.typekit.net/nqh4plj.css">
 
     <script
       src="https://kit.fontawesome.com/5db21ba9c6.js"
@@ -37,8 +39,8 @@
             width="40"
             height="35"
           />
-          APP NAME</a
-        >
+        </a>
+        <a class="navbar-brand logoFont">REVERSE</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -62,10 +64,10 @@
               <a class="nav-link" href="code.html">The Code</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="#">Git Repo</a>
+              <a class="nav-link" target="_blank" href="https://github.com/Nateclsu/Reverse">Git Repo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="#">About</a>
+              <a class="nav-link" target="_blank" href="https://geauxnate-portfolio.netlify.app/">About</a>
             </li>
           </ul>
         </div>
@@ -84,19 +86,17 @@
       <div class="container col-xxl-8 px-4 py-5">
         <div class="row row-cols-1 row-cols-lg-2 g-5 py-5">
           <div class="col order-last order-lg-first">
-            <h1 class="display-5 fw-bold lh-1 mb-3">APP NAME: A Coding Project</h1>
-            <h4 class="lead"> Live life one loop at a time. A javascript coding exercise using loops. <br>
-            Write a program that displays the numbers from 0 to 100. Display the <br>
-            even numbers in <strong>BOLD.</strong>
+            <h1 class="display-5 fw-bold lh-1 mb-3">REVERSE: A Coding Project</h1>
+            <h4 class="lead"> There and back again. A javascript coding exercise using arrays. Write <br> a program that displays a string in reverse.
             </h4>
-            <ul class="fa-ul pt-2 checklist">
-              <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
-              <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Fundamentals</li>
-              <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Loops</li>
-              <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Functions</li>
-              <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Dom Manipulation</li>
-              <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript If/Then/Else</li>
-              <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Boolean Logic</li>
+            <ul class="fa-ul pt-2">
+              <li><span class="fa-li checklist"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
+              <li><span class="fa-li checklist"><i class="fas fa-check-square"></i></span>Javascript Fundamentals</li>
+              <li><span class="fa-li checklist"><i class="fas fa-check-square"></i></span>Javascript Loops</li>
+              <li><span class="fa-li checklist"><i class="fas fa-check-square"></i></span>Javascript Functions</li>
+              <li><span class="fa-li checklist"><i class="fas fa-check-square"></i></span>Javascript Dom Manipulation</li>
+              <li><span class="fa-li checklist"><i class="fas fa-check-square"></i></span>Javascript If/Then/Else</li>
+              <li><span class="fa-li checklist"><i class="fas fa-check-square"></i></span>Javascript Boolean Logic</li>
             </ul>
             <div>
               <a type="button" class="btn btn-outline-dark btn-lg px-4 me-md-2" href="app.html">Try It Out!</a>
@@ -113,7 +113,7 @@
             </h5>
           </div>
           <div class="col">
-            <img src="img/TAKE OFF.png" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="400" height="200">
+            <img src="img/REVERSE.png" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="400" height="200">
         </div>
       </div>
     </main>
@@ -137,8 +137,8 @@
             <img
               src="img/Nate Canterbury.png"
               alt="Nate Canterbury Logo"
-              height="70"
-              width="300"
+              height="50"
+              width="250"
             />
           </div>
           <div
@@ -146,12 +146,12 @@
           >
             <div class="row">
               <div class="col social">
-                <a href="#" target="_blank"
+                <a href="https://www.linkedin.com/feed/" target="_blank"
                   ><i class="fab fa-linkedin fa-2x" style="color: #3c5291"></i
                 ></a>
               </div>
               <div class="col social">
-                <a href="#" target="_blank"
+                <a href="https://github.com/Nateclsu" target="_blank"
                   ><i class="fab fa-github fa-2x" style="color: #3c5291"></i
                 ></a>
               </div>
