--- a/app.html
+++ b/app.html
@@ -17,6 +17,8 @@
       crossorigin="anonymous"
     />
 
+    <link rel="stylesheet" href="https://use.typekit.net/nqh4plj.css">
+
     <script
       src="https://kit.fontawesome.com/5db21ba9c6.js"
       crossorigin="anonymous"
@@ -37,8 +39,8 @@
             width="40"
             height="35"
           />
-          APP NAME</a
-        >
+        </a>
+        <a class="navbar-brand logoFont">REVERSE</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -73,8 +75,36 @@
     </nav>
      <!-- ==== Main Section ==== -->
     <main class="flex-shrink-0">
-        <div class="container">
-
+        <div class="container mt-5">
+          <div class="row row-cols-1 row-cols-lg-2">
+            <div class="col">
+              <h1 class="display-5 fw-bold lh-1 mb-3">
+                REVERSE: A Coding Project
+              </h1>
+              <h4 class="lead pb-3">
+                There and back again. A javascript coding exercise using arrays. Write a <br>
+                program that displays a string in reverse.
+              </h4>
+            </div>
+            <div class="col">
+              <h5 class="border-1 border-bottom border-secondary">Enter A String To Reverse</h5>
+              <form class="row gx-3 gy-2">
+                <div class="col">
+                  <input id="userString" type="text" class="form-control" placeholder="Enter A String" aria-label="Enter A String">
+                </div>
+                <div class="col-12">
+                  <button type="button" id="btnSubmit" class="btn btn-secondary">Reverse</button>
+                </div>
+                <div class="alert alert-secondary mt-5 invisible fade show" id="alert" role="alert">
+                  <h4 class="alert-heading">Your Strings Are Reversed!</h4>
+                  <hr>
+                  <p class="mb-0" id="msg">
+                    <!-- Insert a Message -->
+                  </p>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
     </main>
     <!-- ==== Footer Section ==== -->
@@ -95,8 +125,8 @@
               <img
                 src="img/Nate Canterbury.png"
                 alt="Nate Canterbury Logo"
-                height="70"
-                width="300"
+                height="50"
+                width="250"
               />
             </div>
             <div
@@ -104,12 +134,12 @@
             >
               <div class="row">
                 <div class="col social">
-                  <a href="#" target="_blank"
+                  <a href="https://www.linkedin.com/feed/" target="_blank"
                     ><i class="fab fa-linkedin fa-2x" style="color: #3c5291"></i
                   ></a>
                 </div>
                 <div class="col social">
-                  <a href="#" target="_blank"
+                  <a href="https://github.com/Nateclsu" target="_blank"
                     ><i class="fab fa-github fa-2x" style="color: #3c5291"></i
                   ></a>
                 </div>
@@ -131,5 +161,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/site.js"></script>
+    <script>
+      document.getElementById("btnSubmit").addEventListener("click", getValue);
+    </script>
   </body>
 </html>
